finished the suggest events to create user story